syntax = "proto3";

package api;

option go_package = "github.com/cloutdotgg/backend/internal/pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// Company represents an AI company
message Company {
  int32 id = 1;
  string name = 2;
  string slug = 3;
  google.protobuf.StringValue logo_url = 4;
  google.protobuf.StringValue description = 5;
  google.protobuf.StringValue website = 6;
  string category = 7;
  repeated string tags = 8;
  google.protobuf.Int32Value founded_year = 9;
  google.protobuf.StringValue hq_location = 10;
  google.protobuf.StringValue employee_range = 11;
  google.protobuf.StringValue funding_stage = 12;
  int32 elo_rating = 13;
  int32 total_votes = 14;
  int32 wins = 15;
  int32 losses = 16;
  int32 rank = 17;
  google.protobuf.Timestamp created_at = 18;
  google.protobuf.Timestamp updated_at = 19;
}

// CompanyList is a list of companies
message CompanyList {
  repeated Company companies = 1;
}

// Vote represents a head-to-head vote
message Vote {
  int32 id = 1;
  int32 winner_id = 2;
  int32 loser_id = 3;
  google.protobuf.StringValue session_id = 4;
  google.protobuf.Timestamp created_at = 5;
}

// VoteRequest represents a voting request
message VoteRequest {
  int32 winner_id = 1;
  int32 loser_id = 2;
  string session_id = 3;
}

// VoteResponse represents the voting response with updated ELOs
message VoteResponse {
  Company winner = 1;
  Company loser = 2;
  int32 winner_elo_diff = 3;
  int32 loser_elo_diff = 4;
}

// MatchupPair represents two companies for voting
message MatchupPair {
  Company company1 = 1;
  Company company2 = 2;
}

// CompanyRating represents a rating for a specific criterion
message CompanyRating {
  int32 id = 1;
  int32 company_id = 2;
  string criterion = 3;
  int32 score = 4;
  google.protobuf.StringValue session_id = 5;
  google.protobuf.Timestamp created_at = 6;
}

// RatingRequest represents a rating submission
message RatingRequest {
  int32 company_id = 1;
  string criterion = 2;
  int32 score = 3;
  string session_id = 4;
}

// AggregatedRating represents aggregated ratings for a criterion
message AggregatedRating {
  string criterion = 1;
  double average_score = 2;
  int32 total_ratings = 3;
}

// AggregatedRatingList is a list of aggregated ratings
message AggregatedRatingList {
  repeated AggregatedRating ratings = 1;
}

// CompanyComment represents a comment/review
message CompanyComment {
  int32 id = 1;
  int32 company_id = 2;
  string content = 3;
  bool is_current_employee = 4;
  google.protobuf.StringValue session_id = 5;
  int32 upvotes = 6;
  google.protobuf.Timestamp created_at = 7;
}

// CommentRequest represents a comment submission
message CommentRequest {
  int32 company_id = 1;
  string content = 2;
  bool is_current_employee = 3;
  string session_id = 4;
}

// CommentList is a list of comments
message CommentList {
  repeated CompanyComment comments = 1;
}

// LeaderboardRequest represents a leaderboard query
message LeaderboardRequest {
  string category = 1;
  int32 page = 2;
  int32 page_size = 3;
}

// LeaderboardResponse represents the leaderboard data
message LeaderboardResponse {
  repeated Company companies = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// StatsResponse represents overall platform stats
message StatsResponse {
  int32 total_companies = 1;
  int32 total_votes = 2;
  int32 total_ratings = 3;
  int32 total_comments = 4;
  repeated string categories = 5;
}

// CategoryCount represents a category with its count
message CategoryCount {
  string category = 1;
  int32 count = 2;
}

// CategoryCountList is a list of category counts
message CategoryCountList {
  repeated CategoryCount categories = 1;
}

// HealthResponse represents health check response
message HealthResponse {
  string status = 1;
  string database = 2;
}

// ErrorResponse represents an error response
message ErrorResponse {
  string error = 1;
}

// GetCompaniesRequest represents a request to get companies
message GetCompaniesRequest {
  string category = 1;
  string search = 2;
}

// GetCompanyRequest represents a request to get a single company
message GetCompanyRequest {
  string slug = 1;
}

// GetMatchupRequest represents a request to get a matchup
message GetMatchupRequest {
  string category = 1;
}

// UpvoteCommentRequest represents a request to upvote a comment
message UpvoteCommentRequest {
  int32 comment_id = 1;
}

// Empty message for requests/responses with no body
message Empty {}
